# tauri-invoke

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
