[package]
name = "tauri-invoke"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChangeCaps/tauri-invoke"
description = "A simple way to call tauri's invokes from rust wasm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

yew = { version = "0.20", optional = true }

[features]
default = []
